<resources>
    <string name="app_name">GamesSearchApp</string>
    <string name="service_unavailable_message">Service unavailable</string>
    <string name="no_connection_message">No connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="try_again">Try again</string>
    <string name="search">Search</string>
    <string name="list_of_games">List of games</string>
    <string name="detail">Detail</string>
    <string name="loading">Loading</string>
    <string name="genre">Genre</string>
    <string name="platform">Platform</string>
    <string name="publisher">Publisher</string>
    <string name="developer">Developer</string>
    <string name="release_date">Release date</string>
    <string name="description">Description</string>
    <string name="operating_system">Operating system</string>
    <string name="processor">Processor</string>
    <string name="minimum_system_requirements">Minimum System Requirements</string>
    <string name="memory">Memory</string>
    <string name="graphics">Graphics</string>
    <string name="storage">Storage</string>
    <string name="swipe_left">Swipe left</string>
    <string name="share">Share</string>
    <string name="official_website">Official website</string>
    <string name="all">All</string>
    <string name="mmorpg">Mmorpg</string>
    <string name="shooter">Shooter</string>
    <string name="strategy">Strategy</string>
    <string name="moba">Moba</string>
    <string name="racing">Racing</string>
    <string name="sports">Sports</string>
    <string name="social">Social</string>
    <string name="card">Card</string>
    <string name="battle_royale">Battle Royale</string>
    <string name="mmo">Mmo</string>
    <string name="fantasy">Fantasy</string>
    <string name="fighting">Fighting</string>
    <string name="action">Action</string>
    <string name="games_update">Games Update</string>
    <string name="sort_by">Sort by:</string>
    <string name="genre_type">Genre Type</string>
    <string name="apply">Apply</string>
    <string name="favorites">Favorites</string>
    <string name="please_wait">Please Wait…</string>
    <string name="loading_progress">Loading…</string>
    <string name="platform_lower">platform:</string>
    <string name="developer_lower">developer:</string>
    <string name="appGithub">https://github.com/Dendy-Jr/GamesSearchApp</string>
    <string name="sandbox">Sandbox</string>
    <string name="open_world">Open-world</string>
    <string name="mmorts">Mmorts</string>
    <string name="horror">Horror</string>
    <string name="tower_defense">Tower Defense</string>
    <string name="low_spec">Low Spec</string>
    <string name="flight">Flight</string>
    <string name="martial_arts">Martial Arts</string>
    <string name="military">Military</string>
    <string name="sci_fi">Sci Fi</string>
    <string name="anime">Anime</string>
    <string name="_2d">2d</string>
    <string name="_3d">3d</string>
    <string name="mmotps">Mmotps</string>
    <string name="mmofps">Mmofps</string>
    <string name="permadeath">Permadeath</string>
    <string name="superhero">Superhero</string>
    <string name="side_scroller">Side Scroller</string>
    <string name="sailing">Sailing</string>
    <string name="space">Space</string>
    <string name="tank">Tank</string>
    <string name="top_down">Top Down</string>
    <string name="third_person">Third Person</string>
    <string name="first_person">First Person</string>
    <string name="turn_based">Turn Based</string>
    <string name="zombie">Zombie</string>
    <string name="voxel">Voxel</string>
    <string name="pixel">Pixel</string>
    <string name="pve">Pve</string>
    <string name="pvp">Pvp</string>
    <string name="survival">Survival</string>
    <string name="category">Category:</string>
    <string name="sort">Sort:</string>
    <string name="popularity">Popularity</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="relevance">Relevance</string>
    <string name="check_connect">"No internet connection</string>
</resources>